# claudebar

./: .editorconfig  .gitattributes  .gitignore  .mrconfig  CHANGELOG.md  Makefile  README.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml
.github/workflows/: ci.yml  release.yml
apps/linux/budgie/: Makefile  README.md  claudebar.plugin  meson.build
apps/linux/budgie/src/: ClaudebarApplet.vala  ClaudebarPlugin.vala
apps/linux/cinnamon/: Makefile  README.md  api.js  applet.js  auth.js  metadata.json  oauth.js  settings-schema.json  stylesheet.css
apps/linux/common/claudebar-helper/: Cargo.toml  README.md
apps/linux/common/claudebar-helper/src/: api.rs  auth.rs  icon.rs  main.rs  oauth.rs  tray.rs
apps/linux/gnome/: Makefile  esbuild.config.mjs  metadata.json  package-lock.json  package.json  tsconfig.json
apps/linux/gnome/schemas/: org.gnome.shell.extensions.claudebar.gschema.xml
apps/linux/gnome/src/: extension.ts  indicator.ts  prefs.ts
apps/linux/gnome/src/lib/: api.ts  auth.ts  oauth.ts  settings.ts
apps/linux/gnome/src/styles/: stylesheet.scss
apps/linux/kde/: CMakeLists.txt  Makefile  README.md  metadata.json
apps/linux/kde/contents/config/: config.qml  main.xml
apps/linux/kde/contents/ui/: ConfigGeneral.qml  FullRepresentation.qml  UsageBars.qml  main.qml
apps/linux/lxqt/: CMakeLists.txt  Makefile  README.md  claudebar-library.cpp  claudebar-library.h  claudebar.cpp  claudebar.desktop  claudebar.h
apps/linux/mate/: Makefile  README.md  claudebar.py  org.mate.panel.Claudebar.mate-panel-applet  org.mate.panel.applet.ClaudebarFactory.service
apps/linux/xfce/: Makefile  README.md  claudebar.desktop  meson.build
apps/linux/xfce/src/: claudebar.c
apps/macos/: .gitignore  Makefile  Package.swift  README.md
apps/macos/Resources/: Info.plist
apps/macos/Sources/ClaudeBar/: AppDelegate.swift
apps/macos/Sources/ClaudeBar/API/: UsageSource.swift  UsageTypes.swift
apps/macos/Sources/ClaudeBar/Auth/: Keychain.swift  OAuth.swift
apps/macos/Sources/ClaudeBar/Settings/: SettingsStore.swift
apps/macos/Sources/ClaudeBar/UI/: PreferencesWindow.swift  StatusItemController.swift  UsageBarsView.swift
apps/windows/: App.xaml  App.xaml.cs  ClaudeBar.csproj  ClaudeBar.sln  README.md  app.manifest
apps/windows/Api/: UsageSource.cs  UsageTypes.cs
apps/windows/Auth/: OAuth.cs  TokenStore.cs
apps/windows/Settings/: SettingsStore.cs
apps/windows/UI/: FloatingMeterWindow.xaml  FloatingMeterWindow.xaml.cs  PreferencesWindow.xaml  PreferencesWindow.xaml.cs  RelayCommand.cs  TrayIconManager.cs  UsageBarsControl.cs  UsageIconRenderer.cs
apps/windows/installer/: ClaudeBar.wxs
docs/: BRAND_GUIDELINES.md  CONTRIBUTING.md  SUPPORT.md
packaging/arch/: README.md
packaging/arch/claudebar-budgie/: PKGBUILD
packaging/arch/claudebar-cinnamon/: PKGBUILD
packaging/arch/claudebar-gnome/: PKGBUILD
packaging/arch/claudebar-helper/: PKGBUILD
packaging/arch/claudebar-kde/: PKGBUILD
packaging/arch/claudebar-lxqt/: PKGBUILD
packaging/arch/claudebar-mate/: PKGBUILD
packaging/arch/claudebar-xfce/: PKGBUILD
